# ViTables

./: pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package.yml
examples/arrays/: array_samples.h5
examples/tables/: nested_samples.h5
examples/timeseries/: pandas_test1.hdf5  pandas_test2.hdf5  scikits_test3.hdf5
tests/: TEST PLAN PROJECT 2.docx  conftest.py
vitables/: __main__.py  start.py  vtapp.py  vtgui.py
vitables/csv/: export_csv.py
vitables/h5db/: nodeitemdelegate.py
vitables/vttables/: buffer.py  datasheet.py  filenodebuffer.py  leaf_model.py
vitables/vtwidgets/: zoom_cell.py
